indexページの作成

--- a/html/index.html
+++ b/html/index.html
@@ -9,16 +9,16 @@
     <link rel="manifest" href="img/site.webmanifest">
     <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#ffffff">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff"><script src="https://code.iconify.design/1/1.0.3/iconify.basic.min.js"></script>
-    <title>Portfolio | top</title>
+    <meta name="theme-color" content="#ffffff">
+    <title>top | Portfolio</title>
   </head>
   <body>
     <div class="main">
       <div class="profile">
         <div class="icon"><img class="icon__image" src="img/icon.png" alt="プロフィール画像"></div>
         <div class="name">
-          <div class="name__full">Wataru Shime</div>
-          <div class="name__handle">@wawawatataru</div>
+          <h1 class="name__full">Wataru Shime</h1>
+          <h2 class="name__handle">@wawawatataru</h2>
         </div>
         <div class="sns"><a href="https://github.com/wawawatataru" target="blank">
             <div class="button_github"><svg width="40px" height="40px" viewBox="0 0 256 250">
@@ -34,6 +34,32 @@
 </svg>
             </div></a></div>
       </div>
+      <div class="portfolio">
+        <h2 class="portfolio__title">Portfolio</h2>
+        <div class="portfolio__items"><a href="./portfolio_page__work1.html">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオのイメージ画像">
+              <div class="text_container">
+                <div class="text_container__title">Portfolio1</div>
+                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
+              </div>
+            </div></a><a href="./portfolio_page__work1.html">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオのイメージ画像">
+              <div class="text_container">
+                <div class="text_container__title">Portfolio1</div>
+                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
+              </div>
+            </div></a><a href="./portfolio_page__work1.html">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオのイメージ画像">
+              <div class="text_container">
+                <div class="text_container__title">Portfolio1</div>
+                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
+              </div>
+            </div></a>
+        </div>
+      </div>
+      <footer class="footer">
+        <h2 class="footer__text">&copywawawatataru</h2>
+      </footer>
     </div>
   </body>
 </html>
