ポートフォリオページを作成

--- a/html/index.html
+++ b/html/index.html
@@ -37,19 +37,19 @@
       <div class="portfolio">
         <h2 class="portfolio__title">Portfolio</h2>
         <div class="portfolio__items"><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオのイメージ画像">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
               <div class="text_container">
                 <div class="text_container__title">Portfolio1</div>
                 <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
               </div>
             </div></a><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオのイメージ画像">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
               <div class="text_container">
                 <div class="text_container__title">Portfolio1</div>
                 <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
               </div>
             </div></a><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオのイメージ画像">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
               <div class="text_container">
                 <div class="text_container__title">Portfolio1</div>
                 <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
