ポートフォリオページの大枠を記述

--- a/html/anopost_page copy.html
+++ b/html/anopost_page copy.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="work_main"><img class="work__image" src="img/portfolio/dummy_01.jpg" alt="AnoPostの画像"></div>
+      <div class="work_main"><img class="work__image" src="img/portfolio/anopost.png" alt="AnoPostの画像"></div>
       <div class="description">
         <p class="description__title">AnoPost</p>
         <p class="description__text">AnoPostは企業倫理ホットラインを簡単に作れるWebサービスです。</p>
@@ -239,23 +239,23 @@
       </div>
       <div class="image">
         <h2 class="image__title">Portfolio</h2>
-        <div class="image__items"><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
+        <div class="image__items"><a href="./anopost_page.html">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/anopost.png" alt="ポートフォリオ1の画像">
               <div class="text_container">
-                <div class="text_container__title">Portfolio1</div>
-                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
+                <div class="text_container__title">AnoPost</div>
+                <div class="text_container__description">Ruby on Railsを用いた企業倫理ホットライン作成サービス</div>
               </div>
-            </div></a><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
+            </div></a><a href="./anopost_page.html">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/anopost.png" alt="ポートフォリオ1の画像">
               <div class="text_container">
-                <div class="text_container__title">Portfolio1</div>
-                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
+                <div class="text_container__title">AnoPost</div>
+                <div class="text_container__description">Ruby on Railsを用いた企業倫理ホットライン作成サービス</div>
               </div>
-            </div></a><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
+            </div></a><a href="./anopost_page.html">
+            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/anopost.png" alt="ポートフォリオ1の画像">
               <div class="text_container">
-                <div class="text_container__title">Portfolio1</div>
-                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
+                <div class="text_container__title">AnoPost</div>
+                <div class="text_container__description">Ruby on Railsを用いた企業倫理ホットライン作成サービス</div>
               </div>
             </div></a>
         </div>
