--- a/html/anopost_page.html
+++ b/html/anopost_page.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="work_main"><img class="work__image" src="img/portfolio/dummy_01.jpg" alt="AnoPostの画像"></div>
+      <div class="work_main"><img class="work__image" src="img/portfolio/anopost.png" alt="AnoPostの画像"></div>
       <div class="description">
         <p class="description__title">AnoPost</p>
         <p class="description__text">AnoPostは企業倫理ホットラインを簡単に作れるWebサービスです。</p>
@@ -237,28 +237,13 @@
           </div>
         </div>
       </div>
-      <div class="image">
-        <h2 class="image__title">Portfolio</h2>
-        <div class="image__items"><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
-              <div class="text_container">
-                <div class="text_container__title">Portfolio1</div>
-                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
-              </div>
-            </div></a><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
-              <div class="text_container">
-                <div class="text_container__title">Portfolio1</div>
-                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
-              </div>
-            </div></a><a href="./portfolio_page__work1.html">
-            <div class="portfolio__item"><img class="portfolio__image" src="img/portfolio/dummy_01.jpg" alt="ポートフォリオ1の画像">
-              <div class="text_container">
-                <div class="text_container__title">Portfolio1</div>
-                <div class="text_container__description">説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1説明テキスト1</div>
-              </div>
-            </div></a>
-        </div>
+      <div class="about">
+        <h2 class="about__title">AnoPostとは</h2>
+        <p class="about__text">企業倫理ホットラインとなる投書箱を簡単に作成できるWebサービスです。</p>
+        <h3 class="about__sub-title">作成理由</h3>
+        <p class="about__text">以前社員数千人規模の企業に務めていた際、社内への改善要望や意見がある場合に、<br>そもそも意見を投稿できるような場所がない場合や、意見することでいづらさを感じるような場面があった。<br>また、近年はハラスメント行為や企業の不祥事がニュースに取り上げられることも増えているため、<br>問題を抱えている従業員、問題を未然に解決したい会社の双方に利点があるサービスを作成しました。</p>
+        <h3 class="about__sub-title">特徴</h3>
+        <p class="about__text">AnoPostは公開されているWebサービスを使うことも、Herokuにデプロイして使うこともできます。<br>Herokuにデプロイする場合はリポジトリのHeroku Buttonをクリックするだけで行なえます。<br>外部で運営されているサービスを利用できない企業もHerokuにデプロイすることで利用することができます。<br><br>ユーザー登録は一切必要ありません。管理者は投書箱の説明文を入力することですぐに投書箱を作成できます。<br>作成された投書箱のURLを共有するだけで投稿者も投書箱を利用できます。<br>ユーザー登録や指定されたアカウントでログインするのとは違い、匿名性が保たれます。<br><br>投稿された内容は管理者のみが閲覧できます。<br>投稿された内容はSlackに同時投稿、CSVエクスポート、JSONエクスポートすることもできるため、<br>既存のワークフローにあった形式で投稿内容を利用することができます。</p>
       </div>
       <footer class="footer">
         <h2 class="footer__text">&copywawawatataru</h2>
